
30 dec 2014
   - had to give up on default back button, instead grab title from rvc (else can't catch and offer to save)
   - maxLabel problems - trying to get number field to handle '<enter number>' in 4s

31 dec 2014
   - improve axis for choice valObj to match specified values
   - setNeedsLayout to set textbox button title to redisplay/change !
   - fixed 'actionSheet display from toolbar' problem for ios 7+ -- kept from deleting valObjs
   - further tweaks to demo tracker
   - can't copy .rtrk to Documents/Inbox, copy to Documents instead

01 jan 2015
   - test on ipad1, ipad mini, iphone 5
   - ready for 2.0 release
   
---commit ---

08 jan 2015
   - addTrackerController call toggleEdit:segcEditTrackerEditItems to confirm table editing and segmented control in agreement

10 jan 2015
   - cancel from addValObjController wiping vo.optDict by overwriting with voStashDict - but stashDict only created if edit dict; fixed, only noticed if saved or causes crash for textbox with linecount opt because graphTypes array different
   - make 'search position' lines in graph dashed
   - make current vo line,bar in graph wider
   - add emojis to titles for sample trackers
   - shift graph title 140 units to right to avoid status bar bleed through on pre-iOS 8.1.1

11 jan 2015
   - set NSFileProtectionComplete flag after all file writes -- oops not needed
   - enable data protection in capabilities in xcode, entitlements on dev portal for both(?) app IDs -- seems to activate data protection app-wide, so all files protected automatically
   - add lines to demo tracker re: delete sample trackers and reload in system settings

--- commit ---

    - tweaks to bundle for app store submission
    - submitted as 2.0.0

--- commit ---

   
+ check mail func as changing present view controller calls (ios6)

+ add -[n] entries thing
+ add entry_count as a fn piece -- count of entries over range, so avg could be sum()/entry_count



